--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <b>
                     Allophonic variation with these consonants' voiced counterparts probably existed, but it is unknown in what environments these allophones occurred. In all
                     likely-hood, the voiced counterparts probably occurred between vowels (this might have even occurred between words). If that is the case, it would be more accurate that the voiceless consonants were
-                    allophones of the voiced consonants. The voiceless stops (plosives) and fricatives are shown as that is how they have been historically analyzed
+                    allophones of the voiced consonants. The voiceless stops (plosives) and fricatives are shown as that is how they have been historically analyzed.
                 </b>
             </p>
 
@@ -364,7 +364,21 @@
                         </table>
                     </td>
                 </tr>
+                <tr>
+                    <td style="background-color: antiquewhite; border: none;"></td>
+                    <td style="background-color: antiquewhite; border: none;"></td>
+                    <td style="font-size: 10pt; background-color: antiquewhite; border: none;
+                    white-space: wrap;"><i>The use of the acute accent here <br> is not standard IPA notation</i></td>
+                </tr>
             </table>
+
+            <p>
+                <b>
+                    Pre-Classical Folliccanese had (C)V syllable structure (the parenthesis around the C means that it did not have to occur in every syllable). Any consonant
+                    could be in the place of C, and any vowel could be in the place of V. While words did not have to start with a consonant, every  other syllable in the word
+                    had to as vowels could not "touch" in Pre-Classical Folliccanese (i.e. yu would not be a valid word in Pre-Classical Folliccanese)
+                </b>
+            </p>
 
         </div>
 
