--- a/index.html
+++ b/index.html
@@ -376,7 +376,16 @@
                 <b>
                     Pre-Classical Folliccanese had (C)V syllable structure (the parenthesis around the C means that it did not have to occur in every syllable). Any consonant
                     could be in the place of C, and any vowel could be in the place of V. While words did not have to start with a consonant, every  other syllable in the word
-                    had to as vowels could not "touch" in Pre-Classical Folliccanese (i.e. yu would not be a valid word in Pre-Classical Folliccanese)
+                    had to as vowels could not "touch" in Pre-Classical Folliccanese (i.e. yu would not be a valid word in Pre-Classical Folliccanese). Not every vowel could combine
+                    with every consonant. Only neutral vowels could do that. Nasal vowels could only go after nasal consonants, while screamed vowels could only go after laryngeal
+                    fricatives (x and h). 
+                </b>
+            </p>
+
+            <h4>Grammar</h4>
+            <p>
+                <b>
+                    
                 </b>
             </p>
 
