--- a/index.html
+++ b/index.html
@@ -382,10 +382,28 @@
                 </b>
             </p>
 
-            <h4>Grammar</h4>
+            <h4>
+                <b>
+                    Stress
+                </b>
+            </h4>
+
             <p>
                 <b>
-                    
+                    Pre-Classical Folliccanese was probably a syllable-timed languages, meaning that each syllable took around the same amount of time to say.
+                    Compare that to English where stressed syllables are lengthened. Pre-Classical Folliccanese did have lexical stress marked by pitch-accent (a stress-marking
+                    system in which some syllables have a different pitch than others, in this case, stressed syllables are marked with a high tone). 
+                    Pitch-accent is not to be confused with tonality, as high or neutral pitch does not necessarily change a word's meaning as it does
+                    in tonal languages. Changing where that pitch-accent is placed can however change the meaning of a word. Lexical stress in Pre-Classical Folliccanese always
+                    falls on the first syllable, except if a syllable has a screamed vowel, then the first screamed vowel is stressed. When a screamed vowel is stressed, it is
+                    pronounced at a higher pitch than usual, but when it is not stressed, it is still pronounced at a screamed vowel's distinctively high pitch.
+                </b>
+            </p>
+
+            <p>
+                <b>
+                    Prosodic stress, weirdly enough, was probably marked by lengthening a the last syllable of a word. These ways of marking lexical and prosodic stress gave
+                    Pre-Classical Folliccanese gave it a distinctively musical quality. Many works Mystic Period writers have described it as song-like and musical.
                 </b>
             </p>
 
