--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <td>(r)</td>
                 </tr>
                 <tr>
-                    <th>semivowel</th>
+                    <th>approximant</th>
                     <td colspan="4">w</td>
                     <td></td>
                 </tr>
@@ -382,11 +382,11 @@
                 </b>
             </p>
 
-            <h4>
+            <h5>
                 <b>
                     Stress
                 </b>
-            </h4>
+            </h5>
 
             <p>
                 <b>
