--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             font-size: 17pt;
             border-collapse: collapse;
             white-space: nowrap;
+            text-align: center;
         }
 
         th, td {
