--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         table, th, td {
-            border: 3px, solid rgb(185, 75, 75);
+            border: 3px solid rgb(185, 75, 75);
             font-size: 17pt;
             border-collapse: collapse;
             white-space: nowrap;
