--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     Early Follicle society was mainly Agrarian and Isolationist. Many Follicles did not venture out into the world since the First Follicles — the Wisest and most
                     Respected Follicles — looked over the Whole World and chose the Follicle Fjords as their Home. They wouldn't Dare go against the Decisions of their Forefathers.
                     This stationary attitude allowed the Follicles to perfect their Powers. Archaeological evidence suggests that these early Follicles used Glyphs to channel
-                    their Powers. Whether these were transciprions of their language or purely Magical is still up for debate. If these Glyphs do represent a Language, they would be
+                    their Powers. Whether these were transcriptions of their language or purely Magical is still up for debate. If these Glyphs do represent a Language, they would be
                     our Only Records of Proto-Folliccanese, the language of the 1ˢᵗ Century.
                 </b>
             </p>
