--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </b>
             </p>
 
-            <table>
+            <table style="border: none;">
                 <tr>
                     <th colspan="6">Consonants</th>
                 </tr>
@@ -261,7 +261,7 @@
                     <td>s</td>
                     <td>x</td>
                     <td>h</td>
-                    <td>ʔ *</td>
+                    <td>ʔ ( )</td>
                 </tr>
                 <tr>
                     <th>trill</th>
@@ -272,9 +272,25 @@
                     <td>(r)</td>
                 </tr>
                 <tr>
-                    <th>approximant</th>
+                    <th>semivowel</th>
                     <td colspan="4">w</td>
                     <td></td>
+                </tr>
+                <tr>
+                    <td style="border: none; background-color: antiquewhite;"></td>
+                    <td colspan="4" style="font-size: 10pt; background-color: antiquewhite; border: none;">
+                        <i>
+                            A: Many analyze the glottal stop (ʔ) as null onset (∅)
+                        </i>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="border: none; background-color: antiquewhite;"></td>
+                    <td colspan="4" style="font-size: 10pt; background-color: antiquewhite; border: none;">
+                        <i>
+                            B: The semivowel w only occurs in words that begin with /u/, where it can function as that syllable's onset
+                        </i>
+                    </td>
                 </tr>
             </table>
 
