--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <td>p</td>
                     <td>t</td>
                     <td>k</td>
-                    <td></td>
+                    <td>ʔ ( )</td>
                     <td></td>
                 </tr>
                 <tr>
@@ -261,7 +261,7 @@
                     <td>s</td>
                     <td>x</td>
                     <td>h</td>
-                    <td>ʔ ( )</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <th>trill</th>
@@ -288,7 +288,8 @@
                     <td style="border: none; background-color: antiquewhite;"></td>
                     <td colspan="4" style="font-size: 10pt; background-color: antiquewhite; border: none;">
                         <i>
-                            B: The semivowel w only occurs in words that begin with /u/, where it can function as that syllable's onset
+                            B: The semivowel w only occurs in words that begin with /u/, where it can function as that syllable's onset. Speakers would not be able to distinguish
+                            [wu] from [ʔu] 
                         </i>
                     </td>
                 </tr>
@@ -391,11 +392,19 @@
 
             <p>
                 <b>
-                    Pre-Classical Folliccanese had (C)V syllable structure (the parenthesis around the C means that it did not have to occur in every syllable). Any consonant
-                    could be in the place of C, and any vowel could be in the place of V. While words did not have to start with a consonant, every  other syllable in the word
-                    had to as vowels could not "touch" in Pre-Classical Folliccanese (i.e. yu would not be a valid word in Pre-Classical Folliccanese). Not every vowel could combine
-                    with every consonant. Only neutral vowels could do that. Nasal vowels could only go after nasal consonants, while screamed vowels could only go after laryngeal
-                    fricatives (x and h). 
+                    Pre-Classical Folliccanese had CV syllable structure, meaning that every syllable had to begin with a consonant and end with a vowel. This might not seem the case
+                    when we romanize words like <i>ynãfanæ</i>, meaning woman, as there appears to be no consonant before y. However, when we romanize Pre-Classical Folliccanese, we omit the glottal stop (ʔ)
+                    — the apostrophes in bo'o'o wa'er — as it always and only appears in the first syllable of a word that begins with a vowel. There is an exception to this, however,
+                    since if a word begins with /u/, a /w/ would be placed in front of it instead of the glottal stop. This is why we analyze w as a semivowel.
+                    
+                </b>
+            </p>
+
+            <p>
+                <b>
+                    Glottal stops could not occur in syllables that were not the first syllable of a word, so a word like <i>wana'a'a</i> (the apostrophes here represent glottal stops)
+                    could not exist in Pre-Classical Folliccanese. Vowel placement was not free, at least for non-neutral vowels. Neutral vowels could go in any syllable, but nasal vowels
+                    could only go after nasal consonants (n and m), and screamed vowels could only go after laryngeal fricatives (x and h).
                 </b>
             </p>
 
@@ -408,7 +417,7 @@
             <p>
                 <b>
                     Pre-Classical Folliccanese was probably a syllable-timed languages, meaning that each syllable took around the same amount of time to say.
-                    Compare that to English where stressed syllables are lengthened. Pre-Classical Folliccanese did have lexical stress marked by pitch-accent (a stress-marking
+                    Compare that to English where stressed syllables are lengthened. Pre-Classical Folliccanese marked lexical stress with pitch-accent (a stress-marking
                     system in which some syllables have a different pitch than others, in this case, stressed syllables are marked with a high tone). 
                     Pitch-accent is not to be confused with tonality, as high or neutral pitch does not necessarily change a word's meaning as it does
                     in tonal languages. Changing where that pitch-accent is placed can however change the meaning of a word. Lexical stress in Pre-Classical Folliccanese always
