--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <td style="border: none; background-color: antiquewhite;"></td>
                     <td colspan="4" style="font-size: 10pt; background-color: antiquewhite; border: none;">
                         <i>
-                            B: The semivowel w only occurs in words that begin with /u/, where it can function as that syllable's onset. Speakers would not be able to distinguish
+                            B: The semivowel /w/ only occurs in words that begin with /u/, where it can function as that syllable's onset. Speakers would not be able to distinguish
                             [wu] from [ʔu] 
                         </i>
                     </td>
