--- a/index.html
+++ b/index.html
@@ -433,6 +433,18 @@
                 </b>
             </p>
 
+            <h5>
+                <b>
+                    Grammar
+                </b>
+            </h5>
+
+            <p>
+                <b>
+                    Pre-Classical Folliccanese's grammar was somewhat synthetic
+                </b>
+            </p>
+
         </div>
 
 </body>
