--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <p>
                 <b>
                     Prosodic stress, weirdly enough, was probably marked by lengthening a the last syllable of a word. These ways of marking lexical and prosodic stress gave
-                    Pre-Classical Folliccanese gave it a distinctively musical quality. Many works Mystic Period writers have described it as song-like and musical.
+                    Pre-Classical Folliccanese gave it a distinctively musical quality. Many Mystic Period writers have described it as song-like and musical.
                 </b>
             </p>
 
