--- a/index.html
+++ b/index.html
@@ -437,7 +437,41 @@
 
             <p>
                 <b>
-                    Pre-Classical Folliccanese's grammar was somewhat synthetic
+                    Pre-Classical Folliccanese's grammar was somewhat synthetic. It was inflectional enough that most words could be moved around a sentence without changing its
+                    meaning, but it did not have totally free word order. The default word order was SOV (Subject-Object-Verb), so a sentence such as "I eat beef" would be
+                    
+                </b>
+            </p>
+
+            <table style="border: none;">
+                <tr>
+                    <th style="border: none; background-color: antiquewhite;">
+                        ry
+                    </th>
+                    <th style="border: none; background-color: antiquewhite;">
+                        xaka
+                    </th>
+                    <th style="border: none; background-color: antiquewhite;">
+                        tunãnõ
+                    </th>
+                </tr>
+                <tr>
+                    <td style="border: none; background-color: antiquewhite;">
+                        1st Person NOM SING
+                    </td>
+                    <td style="border: none; background-color: antiquewhite;">
+                        cow/beef + INANIM + ACC + SING
+                    </td>
+                    <td style="border: none; background-color: antiquewhite;">
+                        to eat + PRES + PERF
+                    </td>
+                </tr>
+            </table>
+
+            <p>
+                <b>
+                    with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
+                    would be grammatically correct and understood by a Pre-Classical Folliccanese speaker.
                 </b>
             </p>
 
