--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                         1st Person NOM SING
                     </td>
                     <td style="border: none; background-color: antiquewhite;">
-                        cow/beef + INANIM + ACC + SING
+                        cow/beef + ACC + SING
                     </td>
                     <td style="border: none; background-color: antiquewhite;">
                         to eat + PRES + PERF
