--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             border: 3px solid rgb(185, 75, 75);
             font-size: 17pt;
             border-collapse: collapse;
-            white-space: nowrap;
             text-align: center;
         }
 
@@ -120,20 +119,20 @@
 
             <p>
                 <b>
-                    Our first subject is the 1ˢᵗ Follicle Century, dubbed the Missing Century due to the absence of records from this time. Thanks to the Works of unknown
-                    authors in the 2ⁿᵈ and 3ʳᵈ Centuries, we know quite a bit about how life worked in the Missing Century. According to these Texts, the 10 Follicle Families
+                    Our first subject is the 1ˢᵗ Follicle Century, dubbed the Missing Century due to the absence of records from this time. Thanks to the works of unknown
+                    authors in the 2ⁿᵈ and 3ʳᵈ Centuries, we know quite a bit about how life worked in the Missing Century. According to these texts, the 10 Follicle Families
                     divided the Follicle Fjords between them so that each of them would have ample room to grow crops, develop, and do other things. These divisions developed
-                    into the 10 Historic Regions of the Follicle Fjords, many of which Still contain a majority Tribe.
+                    into the 10 Historic Regions of the Follicle Fjords, many of which still contain a majority tribe.
                 </b>
             </p>
 
             <p>
                 <b>
-                    Early Follicle society was mainly Agrarian and Isolationist. Many Follicles did not venture out into the world since the First Follicles — the Wisest and most
-                    Respected Follicles — looked over the Whole World and chose the Follicle Fjords as their Home. They wouldn't Dare go against the Decisions of their Forefathers.
-                    This stationary attitude allowed the Follicles to perfect their Powers. Archaeological evidence suggests that these early Follicles used Glyphs to channel
-                    their Powers. Whether these were transcriptions of their language or purely Magical is still up for debate. If these Glyphs do represent a Language, they would be
-                    our Only Records of Proto-Folliccanese, the language of the 1ˢᵗ Century.
+                    Early Follicle society was mainly agrarian and isolationist. Many Follicles did not venture out into the world since the First Follicles — the wisest and most
+                    respected follicles — looked over the whole world and chose the Follicle Fjords as their Home. They wouldn't dare go against the decisions of their forefathers.
+                    This stationary attitude allowed the Follicles to perfect their powers. Archaeological evidence suggests that these early Follicles used glyphs to channel
+                    their powers. Whether these were transcriptions of their language or purely magical is still up for debate. If these glyphs do represent a language, they would be
+                    our only records of Proto-Folliccanese, the language of the 1ˢᵗ Century.
                 </b>
             </p>
 
@@ -145,25 +144,25 @@
 
             <p>
                 <strong>
-                    Coming into the 2ⁿᵈ Century, a Cultural Shift occurs causing a Desire to Explore and Settle New lands. Over the span of around 30 years, Follicles Spread out
-                    along the Pink Coast. Unlike later Migrations, Tribes seemed to have Migrated in Equal numbers, resulting in Diverse settlements along the Pink Coast. Fear
-                    of What Lay in the coastal Forests prevented most Follicles from venturing Inland, as that would require Passing through Them. However, some Did establish
-                    Settlements in the Inland Prairies, notably those from the 1ˢᵗ and 8ᵗʰ Follicle Tribes, whose families had been Known for their Bravery and Recklessness.
+                    Coming into the 2ⁿᵈ Century, a cultural shift occurs causing a desire to explore and settle new lands. Over the span of around 30 years, Follicles spread out
+                    along the Pink Coast. Unlike later migrations, Tribes seemed to have migrated in equal numbers, resulting in diverse settlements along the Pink Coast. Fear
+                    of what lay in the coastal forests prevented most Follicles from venturing inland. However, some did establish
+                    settlements in the inland Prairies, notably those from the 1ˢᵗ and 8ᵗʰ Follicle Tribes, whose families had been known for their bravery and recklessness.
                 </strong>
             </p>
 
             <p>
                 <strong>
-                    With Settlements being established Up and Down the Coast, Trade was inevitable. Trade networks along the Pink Coast were Bustling by 216, though trade was
-                    established Much Earlier, perhaps as early as 204. Trade to the inland settlements was much Sparser due to the Fear of the Forests. With trade came a
-                    need to keep Track of Trade: Writing. The earliest Writings come from around 210, most of which were Logs of Products coming in and out the Pink Bay,
+                    With settlements being established up and down the coast, trade was inevitable. Trade networks along the Pink Coast were bustling by 216, though trade was
+                    established much earlier, perhaps as early as 204. Trade to the inland settlements was much sparser due to the fear of the forests. With trade came a
+                    need to keep track of trade: writing. The earliest writings come from around 210, most of which were logs of products coming in and out of the Pink Bay,
                     one of the most Populous Pink Coast settlements of the time.
                 </strong>
             </p>
             <p>
                 <strong>
-                    Around 246, one of the most famous Written Works was created: the Follicle Saga. In its full form, it would have Detailed the Creation of the World
-                    and the actions of the different Follicle Tribes. Sadly, most of this saga has been Lost to Time, but a few parts Survive, notably the Creation of the World and
+                    Around 246, one of the most famous written works was created: the Follicle Saga. In its full form, it would have detailed the creation of the world
+                    and the actions of the different Follicle Tribes. Sadly, most of this saga has been lost to time, but a few parts survive, notably the creation of the world and
                     the Story of the First Follicles.
                 </strong>
             </p>
@@ -176,12 +175,12 @@
            
             <p>
                 <b>
-                    An Increase in writing occurred in the 3ʳᵈ Century with the establishment of Political Entities and Governments. Most Polities (political entities)
-                    were city-states, but Some, such as the settlement at Pink Bay, expanded Beyond their walls and Influenced a (relatively) Large area. Pink Bay was able to
-                    do this due to the Large Sums of Money trade brought them. Despite being the Folliccanese Homeland, the Follicle Fjords actually had Less Influence than
-                    Pink Bay. Nevertheless, it was still a Valued Homeland for the Pink Coast Follicles. This era also saw the Rise of Regional identities along the Pink
-                    Coast and in the Inland Prairies. This coincided with the development of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
-                    and 3ʳᵈ Centuries — in these regions. Trends in the few written records we Do have suggest that the Pink Bay Dialect was the standard in literary tradition
+                    An increase in writing occurred in the 3ʳᵈ Century with the establishment of political entities and governments. Most polities (political entities)
+                    were city-states, but some, such as the settlement at Pink Bay, expanded beyond their walls and influenced a (relatively) large area. Pink Bay was able to
+                    do this due to the large sums of money trade brought them. Despite being the Folliccanese Homeland, the Follicle Fjords actually had less influence than
+                    Pink Bay. Nevertheless, it was still a valued homeland for the Pink Coast Follicles. This era also saw the rise of regional identities along the Pink
+                    Coast and in the inland Prairies. This coincided with the development of many distinct dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
+                    and 3ʳᵈ Centuries — in these regions. Trends in the few written records we have suggest that the Pink Bay Dialect was the standard in literary tradition
                     and governance.
                 </b>
             </p>
@@ -198,12 +197,11 @@
 
             <p>
                 <b>
-                    Pre-Classical Folliccanese evolved out of Proto-Folliccanese. We have barely any idea as to what Proto-Folliccanese was like. All we know is that it had an
-                    SOV word order, two grammatical genders (animate and inanimate), had no noun cases, and was head-final. there is one piece of evidence — the Follicle Saga — that
-                    suggests that nasal consonants could take the place of vowels. Notably, the name Nãmnʳ appears in it, where nʳ — a rhinal trill — acts as a vowel. Proto-Folliccanese
-                    also evolved extremely quickly into Pre-Classical Folliccanese by linguistic standards, only taking 100 years to do so. No one knows how this happened, but there
-                    is a fringe theory that states that Proto-Folliccanese was never spoken, and instead Pre-Classical Folliccanese was designed by the First Follicles. However, only
-                    the most insane of insane believe this theory.
+                    Pre-Classical Folliccanese evolved into its written form around the 2ⁿᵈ Century out of the language of the 1ˢᵗ Century, Proto-Folliccanese. Not much is known about
+                    Proto-Folliccanese, however it likely had a basic word order known as SOV (Subject-Object-Verb). This word order was preserved in Pre-Classical Folliccanese as it became
+                    the default word order. The phonology (sounds of a language) of Proto-Folliccanese was probably very similar to that of Pre-Classical Folliccanese. However, its
+                    phonotactics (the rules for how sounds can be combined in a language) might have been looser than Pre-Classical Folliccanese, as the Follicle Chronicles mentions
+                    one name, 
                 </b>
             </p>
 
