--- a/index.html
+++ b/index.html
@@ -201,15 +201,12 @@
                     Proto-Folliccanese, however it likely had a basic word order known as SOV (Subject-Object-Verb). This word order was preserved in Pre-Classical Folliccanese as it became
                     the default word order. The phonology (sounds of a language) of Proto-Folliccanese was probably very similar to that of Pre-Classical Folliccanese. However, its
                     phonotactics (the rules for how sounds can be combined in a language) might have been looser than Pre-Classical Folliccanese, as the Follicle Chronicles mentions
-                    one name, 
-                </b>
-            </p>
-
-            <p>
-                <b>
-                    Our small but sizeable corpus of material has allowed us to get an idea of what Pre-Classical Folliccanese was like. It also helps that the Prairie Languages diverged
-                    from the rest of the Folliccanese languages in the 3ʳᵈ Century. This means that comparative analysis (comparing languages' grammar and vocabulary to see
-                    how they're related) can be used to fill in the gaps.
+                    one name, Nãmnʳ, that violates Pre-Classical Folliccanese's phontactics. This name has been analyzed in three ways. The first being that <i>nʳ</i>, a rhinal trill (a sound
+                    produced by a follicle blowing air through their nose in such a way that it flaps up and down), is functioning as a vowel, which is consistent with many other names within
+                    the saga and Pre-Classical Folliccanese, as both have syllables composed of one consonant and one vowel (CV syllable structure). The second way this has been analyzed is that
+                    <i>mnʳ</i> forms a consonant cluster, indicating that Proto-Folliccanese could have syllable-final consonants, something that is absent in both Pre-Classical Folliccanese and
+                    every other name in the Follicle Saga. The third and least popular analysis is that it is a mistake by the author. Whatever the case may be, it is clear that Proto-Folliccanese
+                    was very different from Pre-Classical Folliccanese
                 </b>
             </p>
 
@@ -219,9 +216,9 @@
             
             <p>
                 <b>
-                    Pre-Classical Folliccanese had a fairly simple consonant inventory that consisted of only voiceless stops and fricatives, as well as nasals and a rhinal trill, a
-                    sound produced when a follicle blows air through their nose in such a way that it flaps up and down. Note that all characters in parentheses are used to represent
-                    that sound in the romanization system used here but not in the IPA.
+                    Pre-Classical Folliccanese had a fairly simple consonant inventory. All of its stops (sounds produced by completely blocking air flow) and fricatives (sounds produced
+                    by nearly blocking air flow to create a hissing or buzzing sound such as the English /s/) were voiceless (produced without the vocal chords vibrating), at least that is how
+                    they are classically analyzed.  
                 </b>
             </p>
 
@@ -295,9 +292,11 @@
 
             <p>
                 <b>
-                    Allophonic variation with these consonants' voiced counterparts probably existed, but it is unknown in what environments these allophones occurred. In all
-                    likely-hood, the voiced counterparts probably occurred between vowels (this might have even occurred between words). If that is the case, it would be more accurate that the voiceless consonants were
-                    allophones of the voiced consonants. The voiceless stops (plosives) and fricatives are shown as that is how they have been historically analyzed.
+                    While the stops and fricatives have been classically analyzed as voiceless, it is unlikely that they were voiceless in all contexts. As suggested by Prairie Folliccanese
+                    and Classical Folliccanese having voiced stops and fricatives most commonly between vowels, Pre-Classical Folliccanese likely had allophonic variation (allophones are sounds
+                    that can replace other sounds while still not changing the meaning of the word, i.e. I could replace the /t/ in water with /ʔ/ to get wa'er and the meaning would not change) with
+                    voiced consonants and fricatives between vowels. This was almost definitely the case in the late 3ʳᵈ Century when Pre-Classical Folliccanese was evolving into Prairie and
+                    Classical Folliccanese.
                 </b>
             </p>
 
