--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <table style="border: none;">
                 <tr>
                     <td style="background-color: antiquewhite; border: none;">
-                        <table>
+                        <table style="text-wrap-mode: nowrap;">
                             <tr>
                                 <th colspan="4">Neutral Vowels</th>
                             </tr>
@@ -335,7 +335,7 @@
                             </tr>
                         </table>
                     </td>
-                    <td style="background-color: antiquewhite; border: none;">
+                    <td style="background-color: antiquewhite; border: none; text-wrap-mode: nowrap;">
                         <table>
                             <tr>
                                 <th colspan="3">Nasal Vowels</th>
@@ -357,7 +357,7 @@
                             </tr>
                         </table>
                     </td>
-                    <td style="background-color: antiquewhite; border: none;">
+                    <td style="background-color: antiquewhite; border: none; text-wrap-mode: nowrap;">
                         <table>
                             <tr>
                                 <th colspan="3">Screamed Vowels</th>
