--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             <p>
                 <b>
                     Prosodic stress, weirdly enough, was probably marked by lengthening a the stressed syllable of a word. These ways of marking lexical and prosodic stress gave
-                    Pre-Classical Folliccanese gave it a distinctively musical quality. Many Mystic Period writers have described it as song-like and musical.
+                    Pre-Classical Folliccanese gave it a distinctive rhythmic quality.
                 </b>
             </p>
 
@@ -434,7 +434,8 @@
 
             <p>
                 <b>
-                    Pre-Classical Folliccanese's grammar was somewhat synthetic. It was inflectional enough that most words could be moved around a sentence without changing its
+                    Pre-Classical Folliccanese's grammar was synthetic, meaning that word parts can be added on to show different grammatical meanings. It was inflectional 
+                    enough that most words could be moved around a sentence without changing its
                     meaning, but it did not have totally free word order. The default word order was SOV (Subject-Object-Verb), so a sentence such as "I eat beef" would be
                     
                 </b>
@@ -468,7 +469,8 @@
             <p>
                 <b>
                     with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
-                    would be grammatically correct and understood by a Pre-Classical Folliccanese speaker.
+                    would be grammatically correct and understood by a Pre-Classical Folliccanese speaker. SOV word order, however, had to be used in relative clauses, which modify a noun phrase
+                    with some kind of relativity (e.g. The people WHO were talking were bad), and yes-no questions.
                 </b>
             </p>
 
