--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
             <p>
                 <b>
-                    with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
+                    (literally "I beef eat")with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
                     would be grammatically correct and understood by a Pre-Classical Folliccanese speaker. SOV word order, however, had to be used in relative clauses, which modify a noun phrase
                     with some kind of relativity (e.g. The people WHO were talking were bad), and yes-no questions.
                 </b>
