--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
 
             <p>
                 <b>
-                    In contrast, to the language's consonant inventory, its vowel inventory was quite complex. There were three series of vowels: neutral, nasal, and screamed. The main
+                    In contrast, to the language's consonant inventory, its vowel inventory was quite complex. There were three series of vowels: neutral, nasal, and screamed. Nasal vowels
+                    differed from neutral vowels in that they are produced by letting some air through the nose. The main
                     distinction from neutral and screamed vowels is that screamed vowels were produced in the "head voice", giving them a different quality compared to the neutral vowels.
                     They get their name from how they are used in casual conversation, where they were produced at a higher volume. However, if follicles needed to talk quietly, they would
                     change the color of the vowels but not the vowels' volumes. Not all vowels could be nasal or screamed, only certain vowels could.
