--- a/index.html
+++ b/index.html
@@ -469,9 +469,19 @@
 
             <p>
                 <b>
-                    (literally "I beef eat")with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
+                    (literally "I beef eat") with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
                     would be grammatically correct and understood by a Pre-Classical Folliccanese speaker. SOV word order, however, had to be used in relative clauses, which modify a noun phrase
-                    with some kind of relativity (e.g. The people WHO were talking were bad), and yes-no questions.
+                    with some kind of relativity (e.g. The people WHO were talking were bad), and yes-no questions. Even though basic sentences could be arrange however one pleased, more complex
+                    sentences had more strict rules. Possessors came before what they possessed (e.g. John's dog, not dog John's), adjectives came before nouns (e.g. red book, not book red),
+                    nouns came before their determiners (articles and numbers, e.g. book the not the book, and hairs two, not two hairs), nouns came before postpositions (e.g. chair the on 
+                    not on the chair), and adverbs came before verbs (e.g. quickly ran not ran quickly). It was the placement of the subject, object, and verb relative to each other that was
+                    free because of the case markings that marked subjects, objects, indirect objects, &c.
+                </b>
+            </p>
+
+            <p>
+                <b>
+                    
                 </b>
             </p>
 
