--- a/index.html
+++ b/index.html
@@ -471,17 +471,16 @@
                 <b>
                     (literally "I beef eat") with Pre-Classical Folliccanese's default word order. Though due to the amount of inflection and the simplicity of the sentence, any ordering of these words 
                     would be grammatically correct and understood by a Pre-Classical Folliccanese speaker. SOV word order, however, had to be used in relative clauses, which modify a noun phrase
-                    with some kind of relativity (e.g. The people WHO were talking were bad), and yes-no questions. Even though basic sentences could be arrange however one pleased, more complex
-                    sentences had more strict rules. Possessors came before what they possessed (e.g. John's dog, not dog John's), adjectives came before nouns (e.g. red book, not book red),
-                    nouns came before their determiners (articles and numbers, e.g. book the not the book, and hairs two, not two hairs), nouns came before postpositions (e.g. chair the on 
-                    not on the chair), and adverbs came before verbs (e.g. quickly ran not ran quickly). It was the placement of the subject, object, and verb relative to each other that was
-                    free because of the case markings that marked subjects, objects, indirect objects, &c.
+                    with some kind of relativity (e.g. The people WHO were talking were bad), and yes-no questions. Though most combinations of words could be placed anywhere within
+                    a clause or phrase in any order because of the amount of inflection, there were set orders for some parts of speech. Adverbs had to go before the verbs they modified
+                    (e.g. quickly ran not ran quickly), nouns came before determiners (articles and numbers, e.g. book the not the book, and books two, not two books), and possessors
+                    came before the things they possessed (e.g. John's house not house John's).
                 </b>
             </p>
 
             <p>
                 <b>
-                    
+
                 </b>
             </p>
 
