--- a/index.html
+++ b/index.html
@@ -480,9 +480,18 @@
 
             <p>
                 <b>
-
+                    Pre-Classical Folliccanese had six noun cases that combined with four grammatical genders to represent various grammatical constructions. Noun and adjective declension would go as
+                    follows:
                 </b>
             </p>
+
+            <table style="border: none;">
+                <tr>
+                    <th style="border: none; background-color: antiquewhite;">
+                        Plurality + Gender + Noun/Adjective + Case
+                    </th>
+                </tr>
+            </table>
 
         </div>
 
