--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         1st Person NOM SING
                     </td>
                     <td style="border: none; background-color: antiquewhite;">
-                        cow/beef + ACC + SING
+                       SING + cow/beef + ACC
                     </td>
                     <td style="border: none; background-color: antiquewhite;">
                         to eat + PRES + PERF
